--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,9 @@
 JIRA API ChangeLog
 ========================================================================
 
-Version 1.0.1, released 2013-??-??
+Version 1.0.1, released 2013-01-07
 ----------------------------------
-Git commit: ???
+Git commit: 85532c8e4c11ffb9502e9a14419b978d96347fe0
 
 Bugfixes
 ~~~~~~~~
